--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "ระบบจัดการรายรับ-รายจ่าย",
-  "short_name": "น้องมีตัง", 
+  "short_name": "FMP", 
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f3f4f6",
